--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "ts-check": "tsc --noEmit --skipLibCheck",
     "prepare": "yarn build",
     "preversion": "yarn lint",
-    "version": "yarn format && yarn build && sed -Ei '' \"s/(yarn-plugin-licenses\\/).+(\\/bundles)/\\1v$npm_package_version\\2/g\" README.md && git add -A",
+    "version": "yarn format && yarn build && sed -Ei '' \"s/(yarn-plugin-licenses-json\\/).+(\\/bundles)/\\1v$npm_package_version\\2/g\" README.md && git add -A",
     "postversion": "git push && git push --tags"
   },
   "dependencies": {
