--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@yarnpkg/parsers": "^2.5.1",
     "@yarnpkg/plugin-pnp": "^3.2.11",
     "clipanion": "3.2.0-rc.4",
+    "format-to-json": "^3.0.3",
     "hosted-git-info": "^6.1.1"
   },
   "devDependencies": {
