chore(deps): update yarn and other deps

--- a/src/__tests__/integration/fixtures/test-package-pnp/.yarnrc.yml
+++ b/src/__tests__/integration/fixtures/test-package-pnp/.yarnrc.yml
@@ -1,4 +1,8 @@
+compressionLevel: mixed
+
 enableColors: false
+
+enableGlobalCache: false
 
 plugins:
   - ../../../../../bundles/@yarnpkg/plugin-licenses.js
