--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "yarn-plugin-licenses",
-  "version": "0.13.0",
+  "version": "1.0.0",
   "description": "Yarn Berry plugin that adds `yarn licenses` commands",
   "main": "src/index.ts",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/mhassan1/yarn-plugin-licenses.git"
+    "url": "git+https://github.com/mhassan1/yarn-plugin-licenses-json.git"
   },
   "engines": {
     "yarn": "^3.0.0"
@@ -16,12 +16,12 @@
     "plugin",
     "licenses"
   ],
-  "author": "Marc Hassan",
+  "author": "Sarah Sporck",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/mhassan1/yarn-plugin-licenses/issues"
+    "url": "https://github.com/mhassan1/yarn-plugin-licenses-json/issues"
   },
-  "homepage": "https://github.com/mhassan1/yarn-plugin-licenses#readme",
+  "homepage": "https://github.com/mhassan1/yarn-plugin-licenses-json#readme",
   "scripts": {
     "test": "jest",
     "build": "builder build plugin",
@@ -32,35 +32,35 @@
     "ts-check": "tsc --noEmit --skipLibCheck",
     "prepare": "yarn build",
     "preversion": "yarn lint",
-    "version": "yarn format && yarn build && sed -Ei '' \"s/(yarn-plugin-licenses-json\\/).+(\\/bundles)/\\1v$npm_package_version\\2/g\" README.md && git add -A",
+    "next-version": "yarn format && yarn build && sed -Ei '' \"s/(yarn-plugin-licenses-json\\/).+(\\/bundles)/\\1v$npm_package_version\\2/g\" README.md && git add -A",
     "postversion": "git push && git push --tags"
   },
   "dependencies": {
-    "@yarnpkg/builder": "^3.3.0",
-    "@yarnpkg/cli": "^3.6.3",
-    "@yarnpkg/core": "^3.5.3",
-    "@yarnpkg/fslib": "^2.10.3",
-    "@yarnpkg/libzip": "^2.3.0",
-    "@yarnpkg/parsers": "^2.5.1",
-    "@yarnpkg/plugin-pnp": "^3.2.13",
-    "clipanion": "3.2.0-rc.4",
+    "@yarnpkg/builder": "^4.0.0",
+    "@yarnpkg/cli": "^4.0.1",
+    "@yarnpkg/core": "^4.0.1",
+    "@yarnpkg/fslib": "^3.0.1",
+    "@yarnpkg/libzip": "^3.0.0",
+    "@yarnpkg/parsers": "^3.0.0",
+    "@yarnpkg/plugin-pnp": "^4.0.1",
+    "clipanion": "4.0.0-rc.2",
     "format-to-json": "^3.0.3",
     "hosted-git-info": "^7.0.1"
   },
   "devDependencies": {
-    "@types/hosted-git-info": "^3.0.3",
-    "@types/jest": "^29.5.2",
-    "@types/node": "^18.16.19",
-    "@typescript-eslint/eslint-plugin": "^5.61.0",
-    "@typescript-eslint/parser": "^5.61.0",
-    "@yarnpkg/plugin-npm": "^2.7.4",
-    "@yarnpkg/plugin-pack": "^3.2.0",
-    "eslint": "^8.50.0",
-    "eslint-plugin-jsdoc": "^39.9.1",
-    "jest": "^29.6.0",
+    "@types/hosted-git-info": "^3.0.4",
+    "@types/jest": "^29.5.7",
+    "@types/node": "^18.18.8",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
+    "@yarnpkg/plugin-npm": "^3.0.0",
+    "@yarnpkg/plugin-pack": "^4.0.0",
+    "eslint": "^8.53.0",
+    "eslint-plugin-jsdoc": "^46.8.2",
+    "jest": "^29.7.0",
     "prettier": "^3.0.3",
     "ts-jest": "^29.1.1",
-    "typescript": "~5.1.6"
+    "typescript": "~5.2.2"
   },
-  "packageManager": "yarn@3.6.3"
+  "packageManager": "yarn@4.0.1"
 }
